# vibe-coding

./: .gitignore  CHECKLIST.md  GUIDELINES.md  README.md  config.ini  pyproject.toml  pytest.ini  run_tests.py
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yaml  init.sql
alembic/: env.py
alembic/versions/: 24f2c9405807_migration_description.py  583c069fca2e_add_ai_features_tables.py  8d0ef0748b87_add_notifications_table.py  b0a136db72bb_initial_migration.py
app/: README.md  main.py  websocket_routes.py
app/api/v1/: __init__.py  auth.py  channels.py  messages.py  notifications.py  teams.py  users.py  websocket.py
app/auth/: auth.py  dependencies.py
app/database/: database.py
app/models/: __init__.py  ai_task.py  channel.py  channel_member.py  message.py  notification.py  team.py  team_member.py  user.py
app/routers/: ai.py
app/schemas/: __init__.py  ai.py  auth.py  channel.py  message.py  notification.py  team.py  user.py
app/services/: ai_service.py  channel_service.py  message_service.py  notification_service.py  team_service.py  user_service.py  websocket_manager.py
app/tests/: README.md  conftest.py  test_api_auth.py  test_api_users.py  test_auth.py  test_config.py  test_models.py  test_user_service.py
app/tests/api/: __init__.py
app/utils/: config.py  password.py
docs/: AI_INTEGRATION_DEMO.md  README.md  TEST_SUMMARY.md
docs/demos/: CHANNEL_MANAGEMENT_DEMO.md  CHAT_INTERFACE_DEMO.md  WEBSOCKET_REALTIME_DEMO.md
docs/development/: CHECKLIST.md
docs/project/: huddle-up.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/contexts/: LanguageContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: aiService.ts  api.ts  authService.ts  channelService.ts  messageService.ts  teamService.ts  (+3 more)
(+47 files in other folders)
