[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "python-user"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.0.1"
mypy = "^1.12.0"


[tool.poetry.scripts]
app = "app.main:main"